2018-01-28  Bruno Haible  <bruno@clisp.org>

	Don't write into read-only allocated C strings. Fixes a crash on HP-UX.
	* encoding.d (canonicalize_encoding): Invoke strdup.
	(encoding_from_name): Remove dangerous cast.

2018-01-28  Bruno Haible  <bruno@clisp.org>

	Fix install failure on AIX (bug#726).
	* makemake.in (with_dynamic_modules): Set to 'no' by default on AIX.

2018-01-28  Bruno Haible  <bruno@clisp.org>

	Disable some more builds that don't work on Solaris/x86_64 with cc.
	* Makefile.devel (multibuild-solaris-x86_64-cc): Don't depend on any
	build-porting64-cc-typecodes-* target.
	* lispbibl.d: On Solaris/x86_64 with cc, choose HEAPCODES by default,
	not TYPECODES.

2018-01-28  Bruno Haible  <bruno@clisp.org>

	Fix "reserving address range" warning on Solaris/i386.
	* spvw.d (init_memory): Exclude the address range of immediate objects
	from the address range that we reserve for heap-allocated objects.

2018-01-28  Bruno Haible  <bruno@clisp.org>

	Enable another build variant on Solaris/i386.
	* Makefile.devel (multibuild-solaris-i386-cc): Depend on
	build-porting32-cc-debug_ari_asm.
	(multibuild-solaris-i386-gcc): Depend on
	build-porting32-gcc-debug_ari_asm.

2018-01-28  Bruno Haible  <bruno@clisp.org>

	Fix LOGTEST bug when using Sun C on i386.
	A cast from 'int' to 'bool' works like x -> x!=0 with the standard C99
	'bool' type, but not with the 'signed char' substitute we import from
	gnulib. Cf. also the commit from 2004-03-12.
	* intlog.d (I_I_logtest): Explicitly test for !=0.
	* ari_asm_*.d (and_test_loop_up, test_loop_up): Clarify return type.
	* ari_asm_*-macro.c: Regenerated.

2018-01-28  Bruno Haible  <bruno@clisp.org>

	Avoid hanging builds on Solaris, caused by "make check" in rawsock.
	* configure: Disable "make full-mod-check".

2018-01-28  Bruno Haible  <bruno@clisp.org>

	Fix mistake in an exception type (bug introduced on 2004-04-22).
	* constobj.d (O(type_socket_option)): Fix typo.

2018-01-27  Bruno Haible  <bruno@clisp.org>
